--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,27 +6,19 @@ name: Cypress Tests
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+  
 jobs:
   cypress-run:
-
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - name: Checkout repo
     - uses: actions/checkout@v3
     
     - name: Setup node
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
-        node-version: 16.0.0
+        node-version: '16.0.0'
         
     - name: Install NPM dependencies
       run: npm install
