--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,33 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Cypress Tests
+name: Cypress test run
 
-on:
+on: 
   push:
-    branches: [ "main" ]
-  
-jobs:
-  cypress-run:
-    runs-on: ubuntu-latest
+    branches: 
+      - 'main'
+  workflow_dispatch:
 
+jobs:
+  checkout-and-test:
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout repo
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     
     - name: Setup node
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v2
       with:
-        node-version: '16.0.0'
+        node-version: '16'
         
     - name: Install NPM dependencies
       run: npm install
       
     - name: Cypress run
-      run: npm run cy:run
+      uses: cypress-io/github-action@v2
+      timeout-minutes: 10
+      with:
+        browser: chrome
     
  
