--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Cypress run
+    - uses: cypress-io/github-action@v2
     - run: cypress run
       timeout-minutes: 10
       with:
