--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -22,8 +22,9 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+
     - name: Cypress run
-      uses: cypress-io/github-action@v2
+      run: cypress open
     
 
    
