--- a/.github/workflows/run_tests_ci.yaml
+++ b/.github/workflows/run_tests_ci.yaml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Cypress test run
+name: Cypress headless browser tests
 
 on: 
   push:
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  checkout-and-test:
+  headles-run:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repo
@@ -18,7 +18,7 @@ jobs:
     - name: Install node
       uses: actions/setup-node@v2
       with:
-        node:version: '14'
+        node:version: '14.x.x'
 
     - name: Install dependencies
       run: npm install
