--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Cypress headless browser tests
+name: Cypress browser tests
 
 on: 
   push:
@@ -25,6 +25,8 @@ jobs:
 
     - name: Cypress run
       run: npm run cy:open
+      with:
+        browser: chrome
     
 
    
