--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install node
       uses: actions/setup-node@v2
       with:
-        node:version: '14.x.x'
+        node-version: '14.x.x'
 
     - name: Install dependencies
       run: npm install
